correctly aligning component toggle elements inside container

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -64,6 +64,9 @@ div.component-fields {
 
 div.component-toggle {
   width: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 div.component-toggle p {
